--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="descrizione">Descrizione</string>
     <string name="scan">scansiona</string>
     <string name="acquista">Acquista</string>
+    <string name="trama">Trama</string>
 </resources>
