Implementata la ricerca

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="potrebbero_interessarti_dell_autore">Altri dell\' autore</string>
     <string name="info_sull_autore">Info sull\'Autore</string>
     <string name="cerca">Cerca</string>
+    <string name="divider">Divider</string>
 </resources>
